[gd_scene load_steps=2 format=3 uid="uid://dv2kg8dqvmo4j"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_3bnf6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_3bnf6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1, 1)

[node name="TileMap" type="TileMap" parent="."]

[node name="AgentLayer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopToolbar" type="Control" parent="UI"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 0.1
offset_bottom = 80.0

[node name="VersionLabel" type="Label" parent="UI/TopToolbar"]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 0.3
anchors_bottom = 1.0
text = "Space v1"

[node name="UserCountLabel" type="Label" parent="UI/TopToolbar"]
layout_mode = 1
anchors_left = 0.7
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
text = "Users: 0"
